fix compile script to buse gulp

--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "test-extension": "vscode-test",
     "preinstall": "node build/npm/preinstall.js",
     "postinstall": "node build/npm/postinstall.js",
-    "compile": "tsc -p ./",
-    "watch": "tsc -p ./ -w",
+    "compile": "node ./node_modules/gulp/bin/gulp.js compile",
+    "watch": "npm-run-all -lp watch-client watch-extensions",
     "watchd": "deemon npm run watch",
     "watch-webd": "deemon npm run watch-web",
     "kill-watchd": "deemon --kill npm run watch",
