--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,15 @@ jobs:
         node-version: '20'
         cache: 'npm'
 
+    - name: Install System Dependencies (Linux)
+      if: runner.os == 'Linux'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libkrb5-dev
+
     - name: Install Dependencies
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: npm install
 
     - name: Compile
