--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,11 +29,12 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         sudo apt-get update
-        sudo apt-get install -y libkrb5-dev
+        sudo apt-get install -y libkrb5-dev libx11-dev libxkbfile-dev
 
     - name: Install Dependencies
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        npm_config_arch: ${{ matrix.os == 'windows-latest' && 'x64' || '' }}
       run: npm install
 
     - name: Compile
