--- a/package.json
+++ b/package.json
@@ -265,6 +265,7 @@
   },
   "overrides": {
     "node-gyp-build": "4.8.1",
+    "@vscode/ripgrep": "^1.15.11",
     "kerberos@2.1.1": {
       "node-addon-api": "7.1.0"
     }
