--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,8 @@ jobs:
 
     - name: Install Dependencies
       env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        NPM_CONFIG_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         npm_config_arch: ${{ matrix.os == 'windows-latest' && 'x64' || '' }}
       run: npm install
 
@@ -42,7 +43,8 @@ jobs:
 
     - name: Build and Package
       env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        NPM_CONFIG_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: npm run package -- --${{ matrix.os == 'windows-latest' && 'win' || (matrix.os == 'macos-latest' && 'mac' || 'linux') }}
 
     - name: Upload Artifacts
