Revise .npmrc with comments and new settings
Updated npm configuration for node-gyp with additional comments and options.

--- a/.npmrc
+++ b/.npmrc
@@ -1,7 +1,17 @@
-disturl="https://electronjs.org/headers"
-target="34.3.2"
-ms_build_id="11161073"
-runtime="electron"
-build_from_source="true"
-legacy-peer-deps="true"
-timeout=180000
+# .npmrc - npm configuration for node-gyp
+# This file configures node-gyp for native module compilation
+# The workflow will create this automatically, but you can also use it locally
+
+# Python interpreter for node-gyp (Linux/macOS)
+# python=python3
+
+# Python interpreter for node-gyp (Windows)
+# python=python
+
+# Visual Studio version for node-gyp (Windows only)
+# msvs_version=2022
+
+# Other useful options
+legacy-peer-deps=false
+audit=false
+fund=false
