--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
             platform: linux
           - os: windows-latest
             platform: windows
-          - os: macos-latest
+          - os: macos-13  # Use macOS 13 instead of latest to get Python 3.11
             platform: macos
 
     steps:
@@ -55,6 +55,7 @@ jobs:
           build-essential \
           python3 \
           python3-pip \
+          python3-setuptools \
           libx11-dev \
           libxkbfile-dev \
           libsecret-1-dev \
@@ -84,13 +85,24 @@ jobs:
       shell: powershell
       run: |
         # Install Python for node-gyp
-        choco install python3 -y --no-progress
+        choco install python311 -y --no-progress --force
+
+    - name: Setup Python 3.11 for macOS
+      if: matrix.platform == 'macos'
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
 
     - name: Configure macOS Environment
       if: matrix.platform == 'macos'
       run: |
-        # Install Python 3
-        brew install python@3.11 || true
+        # Ensure setuptools is available for distutils
+        python3.11 -m pip install --upgrade pip setuptools wheel
+        
+        # Verify Python and distutils
+        echo "Python version:"
+        python3.11 --version
+        python3.11 -c "import distutils; print('distutils available')" || echo "Warning: distutils not found"
 
     # ============================================
     # Configure Build Environment for node-gyp
@@ -100,7 +112,6 @@ jobs:
       if: matrix.platform == 'windows'
       shell: bash
       run: |
-        # Create .npmrc file with node-gyp configuration
         cat > .npmrc << EOF
         msvs_version=2022
         python=python
@@ -113,7 +124,6 @@ jobs:
       if: matrix.platform == 'linux'
       shell: bash
       run: |
-        # Create .npmrc file with node-gyp configuration
         cat > .npmrc << EOF
         python=python3
         EOF
@@ -125,13 +135,16 @@ jobs:
       if: matrix.platform == 'macos'
       shell: bash
       run: |
-        # Create .npmrc file with node-gyp configuration
         cat > .npmrc << EOF
-        python=python3
+        python=python3.11
         EOF
         
         echo "Created .npmrc with contents:"
         cat .npmrc
+        
+        # Verify Python is accessible
+        which python3.11
+        python3.11 --version
 
     # ============================================
     # Cache Setup
